--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -172,7 +172,7 @@ INTRO
 }
 #intro .item {
   height: 100%;
-  background: url('../images/home.jpg') center center no-repeat;
+  background: url('../images/Junior-1.jpg') center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
