--- a/css/style.blue.css
+++ b/css/style.blue.css
@@ -194,7 +194,7 @@ INTRO
 }
 #intro .item h1 {
   font-size: 60px;
-  color: #fff;
+  color: #efefef;
   margin-bottom: 40px;
   font-weight: 700;
   opacity: 0;
@@ -212,7 +212,7 @@ INTRO
   }
 }
 #intro .item h2 {
-  color: #fff;
+  color: #efefef;
   margin-bottom: 120px;
   font-weight: 400;
   opacity: 0;
@@ -238,7 +238,7 @@ INTRO
 }
 #intro .container,
 #intro .row {
-  height: 100%;
+  height: 80%;
   position: relative;
 }
 /*
